src/objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>BRI_Goal_Name__c</fullName>
        <label>Goal Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Grand_FatherPresent__c</fullName>
        <label>Grand FatherPresent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Grand_Mother_Present__c</fullName>
        <label>Grand Mother Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFA_Teaching_ATP__c</fullName>
        <label>HFA Teaching ATP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFA_Teaching_Explore__c</fullName>
        <label>HFA Teaching Explore</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFA_Teaching_FFF__c</fullName>
        <label>HFA Teaching FFF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFA_Teaching_Normalizing__c</fullName>
        <label>HFA Teaching Normalizing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFA_Teaching_Problem_Talk__c</fullName>
        <label>HFA Teaching Problem Talk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFA_Teaching_Strategic_ATP__c</fullName>
        <label>HFA Teaching Strategic ATP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HFI Report CAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_HMStuffy__c</fullName>
        <label>HMStuffy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HMV_Number__c</fullName>
        <displayFormat>HV-{0000}</displayFormat>
        <label>HMV Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BRI_HVAIIMemos__c</fullName>
        <label>HVAIIMemos</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_HV_Number__c</fullName>
        <label>HV Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HVisit_Number__c</fullName>
        <label>HVisit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Holding__c</fullName>
        <label>Holding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HomeVisit_Number__c</fullName>
        <label>Home Visit Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_HomeVisit_Type__c</fullName>
        <label>HomeVisit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Visit</fullName>
                </value>
                <value>
                    <fullName>Prenatal Home Visit</fullName>
                </value>
                <value>
                    <fullName>Group Activity</fullName>
                </value>
                <value>
                    <fullName>Other site visit</fullName>
                </value>
                <value>
                    <fullName>Crisis Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_Clean__c</fullName>
        <label>Home Clean</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_Clutter__c</fullName>
        <label>Home Clutter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_Dirty__c</fullName>
        <label>Home Dirty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_Illegal_Activity__c</fullName>
        <label>Home Illegal Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_Reading_Material__c</fullName>
        <label>Home Reading Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_Rodent__c</fullName>
        <label>Home Rodent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_Safety_Concerns__c</fullName>
        <label>Home Safety Concerns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_Visible_Drug__c</fullName>
        <label>Home Visible Drug</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Home_toy_Edu_Material__c</fullName>
        <label>Home toy Edu Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Homelessness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homelessness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Homicidal_Threat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homicidal Threat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Hospitalization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hospitalization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>HomeVisits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BRI_How_to_Achieve1__c</fullName>
        <label>How to Achieve1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_How_to_Achieve2__c</fullName>
        <label>How to Achieve2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_How_to_Achieve3__c</fullName>
        <label>How to Achieve3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_IFSP_related__c</fullName>
        <label>IFSP related</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_IMUptodate__c</fullName>
        <label>IMUptodate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_In_Home__c</fullName>
        <label>In Home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Incident_Description__c</fullName>
        <label>Incident Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Incident_Report_Number__c</fullName>
        <label>Incident Report Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Intervention_Number__c</fullName>
        <label>Intervention Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Location_of_visit__c</fullName>
        <label>Location of visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Loss_Of_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loss Of Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Loss_Of_Custody__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loss Of Custody</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_MOB_FIRST_CR__c</fullName>
        <label>MOB FIRST CR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_MOB_LAST_CR__c</fullName>
        <label>MOB LAST CR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_MOB_Partner_Present__c</fullName>
        <label>MOB Partner Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Mob_Agree_to_Change_Problem__c</fullName>
        <label>Mob Agree to Change Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Alert__c</fullName>
        <label>Mob Alert</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Clean__c</fullName>
        <label>Mob Clean</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Friendly__c</fullName>
        <label>Mob Friendly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Healthy__c</fullName>
        <label>Mob Healthy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Other__c</fullName>
        <label>Mob Other</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Present__c</fullName>
        <label>Mob Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Quiet__c</fullName>
        <label>Mob Quiet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Sick__c</fullName>
        <label>Mob Sick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Sleepy__c</fullName>
        <label>Mob Sleepy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Smiley__c</fullName>
        <label>Mob Smiley</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mob_Talkative__c</fullName>
        <label>Mob Talkative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Multiple_Activities__c</fullName>
        <label>Multiple Activities</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Narrative__c</fullName>
        <label>Narrative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Neighbor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neighbor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Next_Visit__c</fullName>
        <label>Next Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Non_ER_Reason__c</fullName>
        <label>Non ER Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Number_IFSP__c</fullName>
        <label>Number IFSP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Nursing_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nursing Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Accomplishments_1__c</fullName>
        <label>Other Accomplishments 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Accomplishments_2__c</fullName>
        <label>Other Accomplishments 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Accomplishments_3__c</fullName>
        <label>Other Accomplishments 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Children_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Children Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Fam_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Fam Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Fam_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Fam Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Other_HHM_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other HHM Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Material_2__c</fullName>
        <label>Other Material 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Material_3__c</fullName>
        <label>Other Material 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Material_Lesson_2__c</fullName>
        <label>Other Material Lesson 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Material_Lesson_3__c</fullName>
        <label>Other Material Lesson 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Material_Name__c</fullName>
        <label>Other Material Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Material_Sub_Lesson_2__c</fullName>
        <label>Other Material Sub Lesson 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Material_Sub_Lesson_3__c</fullName>
        <label>Other Material Sub Lesson 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Material_Sub_name__c</fullName>
        <label>Other Material Sub name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Present__c</fullName>
        <label>Other Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Reason_Discontinue_BF__c</fullName>
        <label>Other Reason Discontinue BF</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Outside of Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Others_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Report CAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_PAT_Emotional_1__c</fullName>
        <label>PAT Emotional 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PAT_Emotional_2__c</fullName>
        <label>PAT Emotional 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PAT_Intellectual_1__c</fullName>
        <label>PAT Intellectual 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PAT_Intellectual_2__c</fullName>
        <label>PAT Intellectual 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PAT_Language_1__c</fullName>
        <label>PAT Language 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PAT_Language_2__c</fullName>
        <label>PAT Language 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PAT_Physical_1__c</fullName>
        <label>PAT Physical 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PAT_Physical_2__c</fullName>
        <label>PAT Physical 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parent_Angry__c</fullName>
        <label>Parent Angry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parent_Injured_Bruised__c</fullName>
        <label>Parent Injured Bruised</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parent_Quiet_Withdrawn__c</fullName>
        <label>Parent Quiet Withdrawn</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parent_Sad_Tearful__c</fullName>
        <label>Parent Sad Tearful</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parent_Stressed__c</fullName>
        <label>Parent Stressed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parent_Unkempt__c</fullName>
        <label>Parent Unkempt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parent_Upset__c</fullName>
        <label>Parent Upset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>